--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "pragmarx/google2fa-laravel": "^2.3",
+        "simplesoftwareio/simple-qrcode": "*",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-sluggable": "^3.7",
         "symfony/polyfill-intl-grapheme": "^1.32",
